# ENGLISH

./: main.py  w5ge3cai.html  w5ge3cai.py
Engl-shNet-1/: main.py  pyproject.toml  replit_zip_error_log.txt  test.json  单词数据库.db
Engl-shNet-1/templates/: SQLTest.py  beidanci.html  danci.html  fanyi.html  index.html
